# terminal-assistant

./: .gitignore  README.md  meson.build
data/: com.github.droces.terminal-assistant.appdata.xml.in  com.github.droces.terminal-assistant.desktop.in  com.github.terminal-assistant.appdata.xml.in  com.github.terminal-assistant.desktop.in
po/extra/: POTFILES
src/: Application  Application.vala  basic_info_commands.json  test.json  window.ui  window.ui~
